// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ScaleOfSignificanceTemplate component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="scalesignif-author-0"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-lvb8h-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="scale-item-0"
        id="scale-item-0"
      >
        Missing
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-1q194yh-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="statement-item-0"
        id="statement-item-0"
      />
    </div>
  </div>
</div>
`;

exports[`ScaleOfSignificanceTemplate component should render with author name 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="scalesignif-author-0"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
        (Joe Smith)
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-lvb8h-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="scale-item-0"
        id="scale-item-0"
      >
        Minor
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-1q194yh-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
        data-testid="statement-item-0"
        id="statement-item-0"
      >
        <p>
          A creative statement
        </p>
      </span>
    </div>
  </div>
</div>
`;
